--- a/index.html
+++ b/index.html
@@ -61,8 +61,161 @@
 				<img src="./assets/github.png" alt="My Github Profile"
 				class="icon" 
 				onclick="location.href='https://github.com/Ramenboiiskool'"/>
+			</div> 
+		</div>
+	</section>
+	<section id="about">
+		<p class="section__text__p1">Get To Know More</p>
+		<h1 class="title">About Me</h1>
+		<div class="section-container">
+			<div class="section__pic-container">
+				<img src="./assets/about-pic.png" alt="Profile picture" 
+				class="about-pic"/>
+			</div>
+			<div class="about-details-container">
+				<div class="about-containers">
+					<div class="details-container">
+						<img src="./assets/experience.png" 
+						alt="Experience icon"
+						class="icon" />
+						<h3>Experience</h3>
+						<p>2+ years <br />Frontend Development</p>
+					</div>
+					<div class="details-container">
+						<img src="./assets/education.png" 
+						alt="Education icon"
+						class="icon" />
+						<h3>Education</h3>
+						<p>B.Sc. Bachelors Degree <br />M.Sc. Masters Degree</p>
+					</div>
+				</div>
+				<div class="text-container">
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur 
+						totam tempore velit beatae voluptatum quis odit similique. Atque laudantium 
+						deserunt ratione doloribus magnam consectetur ad corporis debitis ea quod perferendis
+						aliquid assumenda possimus, necessitatibus voluptate officia ipsum delectus animi 
+						aliquam earum sed ut sint? Nam autem nobis repellat pariatur earum!
+					</p>
+				</div>
 			</div>
 		</div>
+		<img src="./assets/arrow.png" 
+		alt="Arrow Icon" 
+		class="icon arrow"
+		onclick="location.href='./#experience'" />
+	</section>
+	<section id="experience">
+		<p class="section__text__p1">Explore My</p>
+		<h1 class="title">Experience</h1>
+		<div class="experience-details-container">
+			<div class="about-containers">
+				<div class="details-container">
+					<h2 class="experience-sub-title">Frontend Development</h2>
+					<div class="article-container">
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>HTML</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>CSS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>SASS</h3>
+								<p>Interediate</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>JavaScript</h3>
+								<p>Basic</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>TypeScript</h3>
+								<p>Basic</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>Material UI</h3>
+								<p>Intermediate</p>
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="details-container">
+					<h2 class="experience-sub-title">Frontend Development</h2>
+					<div class="article-container">
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>PostgreSQL</h3>
+								<p>Basic</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>Node JS</h3>
+								<p>Intermediate</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>Express JS</h3>
+								<p>Interediate</p>
+							</div>
+						</article>
+						<article>
+							<img src="./assets/checkmark.png" 
+							alt="Experience icon" 
+							class="icon"/>
+							<div>
+								<h3>Git</h3>
+								<p>Intermediate</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</div>
+		</div>
+		<img src="./assets/arrow.png" 
+		alt="Arrow Icon" 
+		class="icon arrow"
+		onclick="location.href='./#projects'" />
 	</section>
 	<script src="script.js"></script>
    </body>
